sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: '<-' expected but '=' found.
for(i=0 to 8) {
     ^AlgBubbleSort1:12: error: illegal start of simple expression
}
^