sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  
{
	
	for(i=0 to 8) {
     	if(plusPetit(i+1,i)) {
     		echange(  i, i+1) 
		}
	}

}
